Fixed alignment on left side of staff sidebar

--- a/staff/static/staff/staff.scss
+++ b/staff/static/staff/staff.scss
@@ -40,11 +40,11 @@
     padding-bottom: 1em;
 
     a:first-child {
-      margin-top: 0.75em;
+      margin-top: 1.25rem;
     }
 
     .item, .section {
-      padding: 0.25rem 1rem;
+      padding: 0.25rem 1.5rem;
       text-decoration: none;
       color: inherit;
       display: block;
